重构了《博客标签外挂》

--- a/source/_posts/博客标签外挂.md
+++ b/source/_posts/博客标签外挂.md
@@ -5,221 +5,381 @@ date: 2021-11-14 20:27:29
 keywords: butterfly，标签外挂
 categories: 博客
 tags: 标签外挂
-description: butterfly主题中常用的一些的标签外挂，提示外挂，按钮外挂，表格外挂
+description: 总结 Butterfly 主题中常用的标签外挂，包括提示块 note、按钮 btn 等的语法和使用示例。
 tog_img: https://hawking-img.oss-cn-hangzhou.aliyuncs.com/BlogPic/v2-27755cae7abd5ad70b286f1a6d4ade3f_r.jpg
 cover: https://hawking-img.oss-cn-hangzhou.aliyuncs.com/BlogPic/v2-29b8a0fe8cc56e2c28ff42f720ce0566_1440w.jpg
 ---
 
+Hexo + Butterfly 主题内置了很多「标签外挂」（Tag Plugins），可以很方便地写出更美观、可读性更高的文章效果。  
+这篇文章主要整理我自己在写博客时**最常用的几个标签外挂**，方便以后查阅，也希望能帮到同样在使用 Butterfly 的你。
+
+本文主要包括：
+
+- **提示块标签 `note`**
+- **按钮标签 `btn`**
+
+---
+
+## 提示块标签：`note`
+
+提示块标签常用于**突出一段说明、注意事项或补充内容**。  
+基本语法如下：
+
+{% note [color] [style] %}
+这里是提示块内容
+{% endnote %}- **`color`（可选）**：颜色 / 类型，例如：`default`、`primary`、`success`、`info`、`warning`、`danger`
+- **`style`（可选）**：展示风格，例如：`simple`、`modern`、`flat`、`disabled`、`no-icon`
+
+如果不写参数，则使用主题默认样式。
+
+---
+
+## `simple` 风格示例
+
+`simple` 风格是最常用、最基础的一种样式。
+
+### 默认（不指定颜色）
+
+效果：
+
 {% note simple %}
-默认 提示块标签
+默认提示块（simple）
 {% endnote %}
-`{% note simple %}
-默认 提示块标签
-{% endnote %}`
+
+写法：
+
+{% note simple %}
+默认提示块（simple）
+{% endnote %}### 带颜色的 `simple` 提示块
+
+下面是几个常用的颜色示例，其他颜色写法与之类似：
+
+- **default**
+
 {% note default simple %}
-default 提示块标签
+default 提示块（simple）
 {% endnote %}
-`{% note default simple %}
-default 提示块标签
-{% endnote %}`
+
+{% note default simple %}
+default 提示块（simple）
+{% endnote %}- **primary**
+
 {% note primary simple %}
-primary 提示块标签
+primary 提示块（simple）
 {% endnote %}
-`{% note primary simple %}
-primary 提示块标签
-{% endnote %}`
+
+{% note primary simple %}
+primary 提示块（simple）
+{% endnote %}- **success**
+
 {% note success simple %}
-success 提示块标签
+success 提示块（simple）
 {% endnote %}
-`{% note success simple %}
-success 提示块标签
-{% endnote %}`
+
+{% note success simple %}
+success 提示块（simple）
+{% endnote %}- **info**
+
 {% note info simple %}
-info 提示块标签
+info 提示块（simple）
 {% endnote %}
-`{% note info simple %}
-info 提示块标签
-{% endnote %}`
+
+{% note info simple %}
+info 提示块（simple）
+{% endnote %}- **warning**
+
 {% note warning simple %}
-warning 提示块标签
+warning 提示块（simple）
 {% endnote %}
-`{% note warning simple %}
-warning 提示块标签
-{% endnote %}`
+
+{% note warning simple %}
+warning 提示块（simple）
+{% endnote %}- **danger**
+
 {% note danger simple %}
-danger 提示块标签
+danger 提示块（simple）
 {% endnote %}
-`{% note danger simple %}
-danger 提示块标签
-{% endnote %}`
+
+{% note danger simple %}
+danger 提示块（simple）
+{% endnote %}---
+
+## `modern` 风格示例
+
+`modern` 风格的视觉效果更现代一些，适合强调性较强的提示。
+
+### 默认（不指定颜色）
+
 {% note modern %}
-默认 提示块标签
+默认提示块（modern）
 {% endnote %}
-`{% note modern %}
-默认 提示块标签
-{% endnote %}`
+
+{% note modern %}
+默认提示块（modern）
+{% endnote %}### 带颜色的 `modern` 提示块
+
+- **default**
+
 {% note default modern %}
-default 提示块标签
+default 提示块（modern）
 {% endnote %}
-`{% note default modern %}
-default 提示块标签
-{% endnote %}`
+
+{% note default modern %}
+default 提示块（modern）
+{% endnote %}- **primary**
+
 {% note primary modern %}
-primary 提示块标签
+primary 提示块（modern）
 {% endnote %}
-`{% note primary modern %}
-primary 提示块标签
-{% endnote %}`
+
+{% note primary modern %}
+primary 提示块（modern）
+{% endnote %}- **success**
+
 {% note success modern %}
-success 提示块标签
+success 提示块（modern）
 {% endnote %}
-`{% note success modern %}
-success 提示块标签
-{% endnote %}`
+
+{% note success modern %}
+success 提示块（modern）
+{% endnote %}- **info**
+
 {% note info modern %}
-info 提示块标签
+info 提示块（modern）
 {% endnote %}
-`{% note info modern %}
-info 提示块标签
-{% endnote %}`
+
+{% note info modern %}
+info 提示块（modern）
+{% endnote %}- **warning**
+
 {% note warning modern %}
-warning 提示块标签
+warning 提示块（modern）
 {% endnote %}
-`{% note warning modern %}
-warning 提示块标签
-{% endnote %}`
+
+{% note warning modern %}
+warning 提示块（modern）
+{% endnote %}- **danger**
+
 {% note danger modern %}
-danger 提示块标签
+danger 提示块（modern）
 {% endnote %}
-`{% note danger modern %}
-danger 提示块标签
-{% endnote %}`
+
+{% note danger modern %}
+danger 提示块（modern）
+{% endnote %}---
+
+## `flat` 风格示例
+
+`flat` 更扁平，边框/阴影会相对简洁。
+
+### 默认（不指定颜色）
+
 {% note flat %}
-默认 提示块标签
+默认提示块（flat）
 {% endnote %}
-`{% note flat %}
-默认 提示块标签
-{% endnote %}`
+
+{% note flat %}
+默认提示块（flat）
+{% endnote %}### 带颜色的 `flat` 提示块
+
+- **default**
+
 {% note default flat %}
-default 提示块标签
+default 提示块（flat）
 {% endnote %}
-`{% note default flat %}
-default 提示块标签
-{% endnote %}`
+
+{% note default flat %}
+default 提示块（flat）
+{% endnote %}- **primary**
+
 {% note primary flat %}
-primary 提示块标签
+primary 提示块（flat）
 {% endnote %}
-`{% note primary flat %}
-primary 提示块标签
-{% endnote %}`
+
+{% note primary flat %}
+primary 提示块（flat）
+{% endnote %}- **success**
+
 {% note success flat %}
-success 提示块标签
+success 提示块（flat）
 {% endnote %}
-`{% note success flat %}
-success 提示块标签
-{% endnote %}`
+
+{% note success flat %}
+success 提示块（flat）
+{% endnote %}- **info**
+
 {% note info flat %}
-info 提示块标签
+info 提示块（flat）
 {% endnote %}
-`{% note info flat %}
-info 提示块标签
-{% endnote %}`
+
+{% note info flat %}
+info 提示块（flat）
+{% endnote %}- **warning**
+
 {% note warning flat %}
-warning 提示块标签
+warning 提示块（flat）
 {% endnote %}
-`{% note warning flat %}
-warning 提示块标签
-{% endnote %}`
+
+{% note warning flat %}
+warning 提示块（flat）
+{% endnote %}- **danger**
+
 {% note danger flat %}
-danger 提示块标签
+danger 提示块（flat）
 {% endnote %}
-`{% note danger flat %}
-danger 提示块标签
-{% endnote %}`
+
+{% note danger flat %}
+danger 提示块（flat）
+{% endnote %}---
+
+## `disabled` 风格示例
+
+`disabled` 风格一般用于表现**不那么重要或暂时不可用的信息**，整体会相对灰一点。
+
+### 默认（不指定颜色）
+
 {% note disabled %}
-默认 提示块标签
+默认提示块（disabled）
 {% endnote %}
-`{% note disabled %}
-默认 提示块标签
-{% endnote %}`
+
+{% note disabled %}
+默认提示块（disabled）
+{% endnote %}### 带颜色的 `disabled` 提示块
+
+- **default**
+
 {% note default disabled %}
-default 提示块标签
+default 提示块（disabled）
 {% endnote %}
-`{% note default disabled %}
-default 提示块标签
-{% endnote %}`
+
+{% note default disabled %}
+default 提示块（disabled）
+{% endnote %}- **primary**
+
 {% note primary disabled %}
-primary 提示块标签
+primary 提示块（disabled）
 {% endnote %}
-`{% note primary disabled %}
-primary 提示块标签
-{% endnote %}`
+
+{% note primary disabled %}
+primary 提示块（disabled）
+{% endnote %}- **success**
+
 {% note success disabled %}
-success 提示块标签
+success 提示块（disabled）
 {% endnote %}
-`{% note success disabled %}
-success 提示块标签
-{% endnote %}`
+
+{% note success disabled %}
+success 提示块（disabled）
+{% endnote %}- **info**
+
 {% note info disabled %}
-info 提示块标签
+info 提示块（disabled）
 {% endnote %}
-`{% note info disabled %}
-info 提示块标签
-{% endnote %}`
+
+{% note info disabled %}
+info 提示块（disabled）
+{% endnote %}- **warning**
+
 {% note warning disabled %}
-warning 提示块标签
+warning 提示块（disabled）
 {% endnote %}
-`{% note warning disabled %}
-warning 提示块标签
-{% endnote %}`
+
+{% note warning disabled %}
+warning 提示块（disabled）
+{% endnote %}- **danger**
+
 {% note danger disabled %}
-danger 提示块标签
+danger 提示块（disabled）
 {% endnote %}
-`{% note danger disabled %}
-danger 提示块标签
-{% endnote %}`
+
+{% note danger disabled %}
+danger 提示块（disabled）
+{% endnote %}---
+
+## `no-icon` 风格示例（无图标）
+
+有时候不希望左侧出现小图标，可以使用 `no-icon` 风格。
+
+### 默认（不指定颜色）
+
 {% note no-icon %}
-默认 提示块标签
+默认提示块（no-icon）
 {% endnote %}
-`{% note no-icon %}
-默认 提示块标签
-{% endnote %}`
+
+{% note no-icon %}
+默认提示块（no-icon）
+{% endnote %}### 带颜色的 `no-icon` 提示块
+
+- **default**
+
 {% note default no-icon %}
-default 提示块标签
+default 提示块（no-icon）
 {% endnote %}
-`{% note default no-icon %}
-default 提示块标签
-{% endnote %}`
+
+{% note default no-icon %}
+default 提示块（no-icon）
+{% endnote %}- **primary**
+
 {% note primary no-icon %}
-primary 提示块标签
+primary 提示块（no-icon）
 {% endnote %}
-`{% note primary no-icon %}
-primary 提示块标签
-{% endnote %}`
+
+{% note primary no-icon %}
+primary 提示块（no-icon）
+{% endnote %}- **success**
+
 {% note success no-icon %}
-success 提示块标签
+success 提示块（no-icon）
 {% endnote %}
-`{% note success no-icon %}
-success 提示块标签
-{% endnote %}`
+
+{% note success no-icon %}
+success 提示块（no-icon）
+{% endnote %}- **info**
+
 {% note info no-icon %}
-info 提示块标签
+info 提示块（no-icon）
 {% endnote %}
-`{% note info no-icon %}
-info 提示块标签
-{% endnote %}`
+
+{% note info no-icon %}
+info 提示块（no-icon）
+{% endnote %}- **warning**
+
 {% note warning no-icon %}
-warning 提示块标签
+warning 提示块（no-icon）
 {% endnote %}
-`{% note warning no-icon %}
-warning 提示块标签
-{% endnote %}`
+
+{% note warning no-icon %}
+warning 提示块（no-icon）
+{% endnote %}- **danger**
+
 {% note danger no-icon %}
-danger 提示块标签
+danger 提示块（no-icon）
 {% endnote %}
-`{% note danger no-icon %}
-danger 提示块标签
-{% endnote %}`
+
+{% note danger no-icon %}
+danger 提示块（no-icon）
+{% endnote %}> 提示：颜色（`default`、`primary`、`success` 等）与风格（`simple`、`modern`、`flat`、`disabled`、`no-icon`）可以自由组合，根据文章的语气和用途选择最合适的一种即可。
+
+---
+
+## 按钮标签：`btn`
+
+按钮标签可以在文章中插入一个**带样式的按钮链接**，常用来引导读者访问文档、Demo 或外部站点。
+
+基本语法如下：
+
+{% btn '链接地址', 按钮文字, 图标类名, 颜色 尺寸 %}- **链接地址**：使用单引号包裹，例如 `'https://butterfly.js.org/'`
+- **按钮文字**：显示在按钮上的文本
+- **图标类名**：一般是 Font Awesome 的类名，例如：`far fa-hand-point-right`
+- **颜色**（可选）：如 `blue`、`pink`、`red`、`purple`、`orange`、`green` 等
+- **尺寸**（可选）：如 `larger` 等
+
+> 颜色和尺寸放在最后，用空格分隔，顺序一般为：**颜色 + 尺寸**。
+
+### 常见按钮示例
+
+下面以 Butterfly 官方文档为例：
+
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,blue larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,pink larger %}
@@ -228,12 +388,19 @@ danger 提示块标签
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,orange larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,green larger %}
 
-```
+对应写法如下：
+
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,blue larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,pink larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,red larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,purple larger %}
 {% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,orange larger %}
-{% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,green larger %}
-```
+{% btn 'https://butterfly.js.org/',Butterfly,far fa-hand-point-right,green larger %}---
+
+## 小结
+
+- **提示块 `note`**：用于强调段落内容，可以通过颜色（`default`、`primary`、`success` 等）和风格（`simple`、`modern`、`flat`、`disabled`、`no-icon`）进行组合搭配。
+- **按钮 `btn`**：用于在文章中插入更醒目的链接按钮，支持设置图标、颜色和大小。
+
+合理使用这些标签外挂，可以让你的技术文章**结构更清晰、重点更突出、交互更友好**。如果想了解更多标签外挂，可以前往 Butterfly 官方文档查看更多示例和高级用法。
